--- a/WinFormsProyectoFinal/WinFormsProyectoFinal.csproj
+++ b/WinFormsProyectoFinal/WinFormsProyectoFinal.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="ScottPlot.WinForms" Version="5.0.47" />
   </ItemGroup>
 
   <ItemGroup>
